--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <html>
   <head>
-    <title> My First Web Page</title>
+    <title> My Web Site</title>
   </head>
   
   <body>
-    <p>Welcome to My Web page</p>
+    <p>Welcome to My Web Site</p>
+    <p>8-17-2020 Class session</p>
+    <p><a href="first.html">first.html</a></p>
+      
  </body>
  
 </html>
