--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <p>Welcome to My Web Site</p>
     <p>8-17-2020 Class session</p>
     <p><a href="first.html">first.html</a></p>
-      
+      <p>8-20-2020 Class session</p>
+    <p><a href="headings.html">headings.html</a></p>
  </body>
  
 </html>
