--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
   <tbody>
     <tr>
-      <td style="vertical-align: top;"><img style="width: 1587px; height: 250px;" alt="Julian Alford's Web Site" title="Julian Alford's Web Site" src="../Pictures/media/header.png"><br>
+      <td style="vertical-align: top;"><img style="width: 1587px; height: 250px;" alt="Julian Alford's Web Site" title="Julian Alford's Web Site" src="/media/header.png"><br>
       </td>
     </tr>
     <tr align="center">
       <td style="vertical-align: top;">Welcome to my CTI 110 Page!<br>
       <br>
-      <img style="width: 208px; height: 208px;" alt="This is me" title="This is Julian Alford" src="../Pictures/media/12771815_1141019302576099_7038843222998843189_o.jpg"><br>
+      <img style="width: 208px; height: 208px;" alt="This is me" title="This is Julian Alford" src="media/12771815_1141019302576099_7038843222998843189_o.jpg"><br>
       <br>
 I am Julian Alford and here are some of my pages<br>
       <br>
@@ -66,7 +66,7 @@ I am Julian Alford and here are some of my pages<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;"><img style="width: 1590px; height: 100px;" alt="CTI 110 Fall 2020" title="Welcome to my Web Page" src="../Pictures/media/footer.png"><br>
+      <td style="vertical-align: top;"><img style="width: 1590px; height: 100px;" alt="CTI 110 Fall 2020" title="Welcome to my Web Page" src="/media/footer.png"><br>
       </td>
     </tr>
   </tbody>
