--- a/CSSdemo.html
+++ b/CSSdemo.html
@@ -11,7 +11,7 @@
 
   <tbody>
     <tr>
-      <td style="vertical-align: top;"><img style="width: 1000px; height: 200px;" alt="CSS demo" src="../Pictures/media/CSSdemo.png"><br>
+      <td style="vertical-align: top;"><img style="width: 1610px; height: 200px;" alt="CSS demo" src="media/CSSdemo.png"><br>
       </td>
     </tr>
   </tbody>
@@ -24,7 +24,8 @@
 
 <div style="text-align: center;"> </div>
 
-<h1 style="text-align: center; color: rgb(51, 51, 255);" id="blue">Make me Blue!!</h1>
+<h1 style="text-align: center; color: rgb(51, 51, 255);" id="blue">Make
+me Blue!!</h1>
 
 <div style="text-align: center;"> </div>
 
