--- a/index.html
+++ b/index.html
@@ -52,10 +52,16 @@ I am Julian Alford and here are some of my pages<br>
       
       <td style="text-align: center;"><a href="tabledemo.html">tabledemo.html</a><br>
       </td>
-    </tr><tr>
+    <tr>
             <td style="vertical-align: top; text-align: center;">8/27/2020 Class section<br>
             </td>
             <td style="vertical-align: top; text-align: center;"><a href="CSSdemo.html">CSSdemo.html</a><br>
+            </td>
+          </tr>
+    <tr>
+            <td style="vertical-align: top; text-align: center;">9/3/2020 Class section<br>
+            </td>
+            <td style="vertical-align: top; text-align: center;"><a href="travel.html">travel.html</a><br>
             </td>
           </tr>
 
