--- a/travel.html
+++ b/travel.html
@@ -59,7 +59,7 @@
         <a href="media/denmark picture 1.jpg">
           <img src="media/denmark picture 1.jpg" width="400" height="200" title = "Denmark #1">
         </a>
-  
-    
+  </center>
+   
   </body>
 </html>
