--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-  <!--<link href='https://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet'-->
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Julian's Home page</title></head><body style="color: rgb(0, 0, 0); background-color: rgb(255, 204, 51);" alink="#000099" link="#000099" vlink="#990099">
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
   <tbody>
@@ -20,7 +19,7 @@ I am Julian Alford and here are some of my pages<br>
 
   <tbody>
     <tr>
-      <td style="text-align: center;font-family: 'Audiowide';">8/17/2020 Class Session<br>
+      <td style="text-align: center;">8/17/2020 Class Session<br>
       </td>
       <td style="text-align: center;"><a href="first.html">first.html</a><br>
       </td>
