--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ src="media/12771815_1141019302576099_7038843222998843189_o.jpg"><br>
 <span style="font-family: Cambria; color: rgb(51, 51, 255);">I am
 Julian Alford and here are some of my pages</span><br>
 </big></big> <br>
-<table style="text-align: left; width: 100%;" border="0"
-cellpadding="2" cellspacing="2">
+<table style="text-align: left; width: 1060px; height: 214px;"
+border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
 <td style="text-align: center; font-family: Bahnschrift;">8/17/2020
