--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@ style="vertical-align: top; text-align: center; font-family: Bahnschrift;"><a
 href="travel.html">travel.html</a><br>
 </td>
 </tr>
+  <tr>
+<td
+style="vertical-align: top; text-align: center; font-family: Bahnschrift;">9/10/2020
+Class section<br>
+</td>
+<td
+style="vertical-align: top; text-align: center; font-family: Bahnschrift;"><a
+href="www.freecodecamp.org/">Free Code Camp</a><br>
+</td>
+</tr>
 </tbody>
 </table>
 <br>
