--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Class section<br>
 </td>
 <td
 style="vertical-align: top; text-align: center; font-family: Bahnschrift;"><a
-href="www.freecodecamp.org/">Free Code Camp</a><br>
+href=www.freecodecamp.org>Free Code Camp</a><br>
 </td>
 </tr>
 </tbody>
