--- a/index.html
+++ b/index.html
@@ -27,25 +27,19 @@ src="media/12771815_1141019302576099_7038843222998843189_o.jpg"><br>
 <span style="font-family: Cambria; color: rgb(51, 51, 255);">I am
 Julian Alford and here are some of my pages</span><br>
 </big></big> <br>
-<table style="text-align: left; width: 200px; height: 214px;"
+<table style="text-align: left; width: 551px; height: 316px;"
 border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
-<td style="text-align: center; font-family: Bahnschrift;">8/17/2020
-Class Session<br>
+<td style="vertical-align: top;">8/17/2020 Class Session<br>
 </td>
 <td style="text-align: center; font-family: Bahnschrift;"><a
 href="first.html">first.html</a><br>
 </td>
 </tr>
 <tr>
-<td colspan="1" rowspan="4" style="text-align: center;"><br>
-<br>
-<span style="font-family: Bahnschrift;">8/20/2020 Class
-Session</span><br>
-<br>
-<br>
-<br>
+<td colspan="1" rowspan="4" style="vertical-align: top;">8/20/2020
+Class Session<br>
 </td>
 <td style="text-align: center; font-family: Bahnschrift;"><a
 href="headings.html">headings.html</a><br>
@@ -67,9 +61,7 @@ href="tabledemo.html">tabledemo.html</a><br>
 </td>
 </tr>
 <tr>
-<td
-style="vertical-align: top; text-align: center; font-family: Bahnschrift;">8/27/2020
-Class section<br>
+<td style="vertical-align: top;">8/27/2020 Class session<br>
 </td>
 <td
 style="vertical-align: top; text-align: center; font-family: Bahnschrift;"><a
@@ -77,23 +69,20 @@ href="CSSdemo.html">CSSdemo.html</a><br>
 </td>
 </tr>
 <tr>
-<td
-style="vertical-align: top; text-align: center; font-family: Bahnschrift;">9/3/2020
-Class section<br>
+<td style="vertical-align: top;">9/3/2020 Class session<br>
 </td>
 <td
 style="vertical-align: top; text-align: center; font-family: Bahnschrift;"><a
 href="travel.html">travel.html</a><br>
 </td>
 </tr>
-<tr>
-<td style="vertical-align: top;"><img
-style="width: 1590px; height: 100px;" alt="CTI 110 Fall 2020"
-title="Welcome to my Web Page" src="/media/footer.png"><br>
+</tbody>
+</table>
+<br>
 </td>
 </tr>
 </tbody>
 </table>
-<br>
 </body>
 </html>
+
