--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@ Julian Alford and here are some of my pages</span><br>
 border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
-<td style="vertical-align: top;">8/17/2020 Class Session<br>
+<td style="vertical-align: top; font-family: Bahnschrift;">8/17/2020
+Class Session<br>
 </td>
 <td style="text-align: center; font-family: Bahnschrift;"><a
 href="first.html">first.html</a><br>
 </td>
 </tr>
 <tr>
-<td colspan="1" rowspan="4" style="vertical-align: top;">8/20/2020
-Class Session<br>
+<td colspan="1" rowspan="4"
+style="vertical-align: top; font-family: Bahnschrift;">8/20/2020 Class
+Session<br>
 </td>
 <td style="text-align: center; font-family: Bahnschrift;"><a
 href="headings.html">headings.html</a><br>
@@ -61,7 +63,8 @@ href="tabledemo.html">tabledemo.html</a><br>
 </td>
 </tr>
 <tr>
-<td style="vertical-align: top;">8/27/2020 Class session<br>
+<td style="vertical-align: top; font-family: Bahnschrift;">8/27/2020
+Class session<br>
 </td>
 <td
 style="vertical-align: top; text-align: center; font-family: Bahnschrift;"><a
@@ -69,7 +72,8 @@ href="CSSdemo.html">CSSdemo.html</a><br>
 </td>
 </tr>
 <tr>
-<td style="vertical-align: top;">9/3/2020 Class session<br>
+<td style="vertical-align: top; font-family: Bahnschrift;">9/3/2020
+Class session<br>
 </td>
 <td
 style="vertical-align: top; text-align: center; font-family: Bahnschrift;"><a
@@ -78,11 +82,11 @@ href="travel.html">travel.html</a><br>
 </tr>
 </tbody>
 </table>
-<br>
+<img style="width: 1000px; height: 100px;" alt="Footer"
+src="media/footer.png"><br>
 </td>
 </tr>
 </tbody>
 </table>
 </body>
 </html>
-
