--- a/index.html
+++ b/index.html
@@ -80,6 +80,15 @@ style="vertical-align: top; text-align: center; font-family: Bahnschrift;"><a
 href="travel.html">travel.html</a><br>
 </td>
 </tr>
+  <tr>
+<td style="vertical-align: top; font-family: Bahnschrift;">10/7/2020
+Class session<br>
+</td>
+<td
+style="vertical-align: top; text-align: center; font-family: Bahnschrift;"><a
+href="travel.html">travelwebpage.html</a><br>
+</td>
+</tr>
 </tbody>
 </table>
 <img style="width: 1000px; height: 100px;" alt="Footer"
