--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ Class session<br>
 </td>
 <td
 style="vertical-align: top; text-align: center; font-family: Bahnschrift;"><a
-href="travel.html">travelwebpage.html</a><br>
+href="travelwebpage.html">travelwebpage.html</a><br>
 </td>
 </tr>
 </tbody>
