--- a/travelwebpage.html
+++ b/travelwebpage.html
@@ -11,16 +11,16 @@
         .reasons{color:green;}
     </style>
         <h1>Travel to Denmark</h1>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Flag_of_Denmark.svg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Flag_of_Denmark.svg" style="width:500px;height:600px;">
         <h2> Reasons you should visit</h2>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/68/Copenhagen_Collage2.jpg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/68/Copenhagen_Collage2.jpg" style="width:500px;height:600px;">
         <ol class= "reasons">
             <li>Great Climate</li>
             <li> Great Vistas</li>
             <li> Wonderful People</li>
         </ol>
         <h2>Cool locations</h2>
-        <img src="https://upload.wikimedia.org/wikipedia/en/7/7a/Copenhagen_-_the_little_mermaid_statue_-_2013.jpg">
+        <img src="https://upload.wikimedia.org/wikipedia/en/7/7a/Copenhagen_-_the_little_mermaid_statue_-_2013.jpg" style="width:500px;height:600px;">
         <ul>
             <li> The Mermaid Statue
             <li> Copenhagen
