--- a/travelwebpage.html
+++ b/travelwebpage.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Newest version "Project: Travel webpage"</title>
     </head>
-    <body>
+    <bodystyle="color: rgb(0, 0, 0); background-color: silver;">
     <style>
         h1{color:red;}
         h2{color:purple;}
