--- a/travelwebpage.html
+++ b/travelwebpage.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Newest version "Project: Travel webpage"</title>
+        <title>"Project: Travel webpage"</title>
     </head>
-    <body style="color: rgb(0, 0, 0); background-color: silver;">
+    <body style="background-color: silver;">
     <style>
         h1{color:red;}
         h2{color:purple;}
